map, win text and sprite tweaks + the camera recentres upon screen resize

--- a/NeaProject/Pages/Index.razor
+++ b/NeaProject/Pages/Index.razor
@@ -23,7 +23,7 @@
     </button>
 </div>
 
-<div style="background-color:#222;height:10%">
+<div style="color:#aaa;background-color:#222;height:10%">
     @if (_game == null){ }
     else if (_game.Player?.IsDead() == true)
     {
