Map colour updates + added sword button for mobile vers.

--- a/NeaProject/Pages/Index.razor
+++ b/NeaProject/Pages/Index.razor
@@ -131,7 +131,13 @@
                         </button>
                     </div>
                 </td>
-                <td></td>
+                <td style="font-size:32px">
+                    <div class="d-lg-none">
+                        <button style="width:56px; background-color:transparent; color:#fff" @onclick="@(()=>Move("."))">
+                            ●
+                        </button>
+                    </div>
+                </td>
                 <td style="width:35%"></td>
             </tr>
 
